
[tool.poetry]
name = "homework"
version = "0.1.0"
description = "Очень хорошая программа"
authors = ["Daria Lastochkina daria.lastochkina@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.package]
include = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = {extras = ["dmypy"], version = "^1.15.0"}
black = "^25.1.0"
isort = "^6.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.black]
# Максимальная длина строки
line-length = 119
exclude = 'git'


[tool.isort]
# максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ['venv']
